second part of animation

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
         <div class="part-0">
             <p class="number0">0</p>
         </div>
+        <div class="part-two-1">
+            <p class="number1">1</p>
+        </div>
+        <div class="part-two-2">
+            <p class="number2">2</p>
+        </div>
+
+        <div class="part-two-3">
+            <p class="number3">3</p>
+        </div>
     </div>
 </body>
 
