--- a/index.html
+++ b/index.html
@@ -27,8 +27,17 @@
         <div class="part-two-2">
             <p class="number2">2</p>
         </div>
-
         <div class="part-two-3">
+            <p class="number3">3</p>
+        </div>
+        <div class="part-three-1">
+            <p class="number1">1</p>
+        </div>
+        <div class="part-three-2">
+            <p class="number2">2</p>
+        </div>
+
+        <div class="part-three-3">
             <p class="number3">3</p>
         </div>
     </div>
