fourth part of circle-animation

--- a/index.html
+++ b/index.html
@@ -36,8 +36,16 @@
         <div class="part-three-2">
             <p class="number2">2</p>
         </div>
-
         <div class="part-three-3">
+            <p class="number3">3</p>
+        </div>
+        <div class="part-four-1">
+            <p class="number1">1</p>
+        </div>
+        <div class="part-four-2">
+            <p class="number2">2</p>
+        </div>
+        <div class="part-four-3">
             <p class="number3">3</p>
         </div>
     </div>
